apps/monitoring/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/component: grafana
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
      app.kubernetes.io/instance: grafana
      app.kubernetes.io/component: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
        app.kubernetes.io/instance: grafana
        app.kubernetes.io/component: grafana
    spec:
      serviceAccountName: grafana
      automountServiceAccountToken: false
      enableServiceLinks: false
      securityContext:
        runAsUser: 472
        runAsGroup: 472
        fsGroup: 472
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: grafana
          image: docker.io/grafana/grafana
          ports:
            - name: http-grafana
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: provisioning-alerting
              mountPath: /etc/grafana/provisioning/alerting
              readOnly: true
            - name: grafana-pv
              mountPath: /var/lib/grafana
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 768Mi
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          startupProbe:
            httpGet:
              path: /api/health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
              scheme: HTTP
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
      volumes:
        - name: provisioning-alerting
          configMap:
            name: provisioning-alerting
        - name: grafana-pv
          persistentVolumeClaim:
            claimName: grafana-pvc
        - name: tmp
          emptyDir: {}
